--- a/coursework/Views/Requests/Delete.cshtml
+++ b/coursework/Views/Requests/Delete.cshtml
@@ -5,68 +5,77 @@
 }
 
 <h2>Удалить</h2>
+@if (ViewBag.access)
+{
+    <h3>Вы действительно хотите удалить это?</h3>
+    <div>
+        <h4>Заявка</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                Дата открытия заявки
+            </dt>
 
-<h3>Вы действительно хотите удалить это?</h3>
-<div>
-    <h4>Заявка</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Дата открытия заявки
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.OpenDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.OpenDate)
-        </dd>
+            <dt>
+                Статус заявки
+            </dt>
 
-        <dt>
-            Статус заявки
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Status)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
+            <dt>
+                Описание
+            </dt>
 
-        <dt>
-            Описание
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            <dt>
+                Клиент
+            </dt>
 
-        <dt>
-            Клиент
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Clients.LastName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Clients.LastName)
-        </dd>
+            <dt>
+                Услуга
+            </dt>
 
-        <dt>
-            Услуга
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Services.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Services.Name)
-        </dd>
+            <dt>
+                Работник
+            </dt>
 
-        <dt>
-            Работник
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Employees.LastName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Employees.LastName)
-        </dd>
+        </dl>
 
-    </dl>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-danger" /> |
-            @Html.ActionLink("Вернуться назад", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Удалить" class="btn btn-danger" /> |
+                @Html.ActionLink("Вернуться назад", "Index")
+            </div>
+        }
+    </div>
+}
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
