--- a/coursework/Views/Roles/Delete.cshtml
+++ b/coursework/Views/Roles/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Удалить</h2>
-@if (ViewBag.userRole == 1)
+@if (ViewBag.access)
 {
     <h3>Вы действительно хотите удалить это?</h3>
     <div>
