--- a/coursework/Views/Roles/Index.cshtml
+++ b/coursework/Views/Roles/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Роли</h2>
-@if (ViewBag.userRole == 1)
+@if (ViewBag.access)
 {
     <p>
         @Html.ActionLink("Добавить новую запись", "Create")
