--- a/coursework/Views/Selections/Index5.cshtml
+++ b/coursework/Views/Selections/Index5.cshtml
@@ -2,30 +2,38 @@
 @{
     ViewBag.Title = "Выборка должностей и количества сотрудников на каждой должности";
 }
+@if (ViewBag.access)
+{
+    <h2>
+        Выборка должностей и количества сотрудников на каждой должности
+    </h2>
 
-<h2>
-    Выборка должностей и количества сотрудников на каждой должности
-</h2>
-
-<table class="table">
-    <tr>
-        <th>
-            Должность
-        </th>
-        <th>
-            Количество сотрудников
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+    <table class="table">
         <tr>
-            <td>
-                @item.PositionTitle
-            </td>
-            <td>
-                @item.EmployeeCount
-            </td>
+            <th>
+                Должность
+            </th>
+            <th>
+                Количество сотрудников
+            </th>
         </tr>
-    }
-</table>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @item.PositionTitle
+                </td>
+                <td>
+                    @item.EmployeeCount
+                </td>
+            </tr>
+        }
+    </table>
+}
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
