--- a/coursework/Views/Clients/Delete.cshtml
+++ b/coursework/Views/Clients/Delete.cshtml
@@ -5,52 +5,61 @@
 }
 
 <h2>Удалить</h2>
+@if (ViewBag.access)
+{
+    <h3>Вы действительно хотите удалить это?</h3>
+    <div>
+        <h4>Клиент</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                Фамилия клиента
+            </dt>
 
-<h3>Вы действительно хотите удалить это?</h3>
-<div>
-    <h4>Клиент</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Фамилия клиента
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LastName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+            <dt>
+                Имя клиента
+            </dt>
 
-        <dt>
-            Имя клиента
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.FirstName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+            <dt>
+                Отчество клиента
+            </dt>
 
-        <dt>
-            Отчество клиента
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Patronymic)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Patronymic)
-        </dd>
+            <dt>
+                Контактная информация
+            </dt>
 
-        <dt>
-            Контактная информация
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ContactInfo)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ContactInfo)
-        </dd>
+        </dl>
 
-    </dl>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-danger" /> |
-            @Html.ActionLink("Вернуться назад", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Удалить" class="btn btn-danger" /> |
+                @Html.ActionLink("Вернуться назад", "Index")
+            </div>
+        }
+    </div>
+}
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
