--- a/coursework/Views/Clients/Details.cshtml
+++ b/coursework/Views/Clients/Details.cshtml
@@ -5,46 +5,54 @@
 }
 
 <h2>Просмотр</h2>
+@if (ViewBag.access)
+{
+    <div>
+        <h4>Клиент</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                Фамилия клиента
+            </dt>
 
-<div>
-    <h4>Клиент</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Фамилия клиента
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.LastName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+            <dt>
+                Имя клиента
+            </dt>
 
-        <dt>
-            Имя клиента
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.FirstName)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+            <dt>
+                Отчество клиента
+            </dt>
 
-        <dt>
-            Отчество клиента
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Patronymic)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Patronymic)
-        </dd>
+            <dt>
+                Контактная информация
+            </dt>
 
-        <dt>
-            Контактная информация
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ContactInfo)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ContactInfo)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Редактировать", "Edit", new { id = Model.ClientID }) |
-    @Html.ActionLink("Вернуться назад", "Index")
-</p>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Редактировать", "Edit", new { id = Model.ClientID }) |
+        @Html.ActionLink("Вернуться назад", "Index")
+    </p>
+}
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
