--- a/coursework/Views/Clients/Index.cshtml
+++ b/coursework/Views/Clients/Index.cshtml
@@ -5,47 +5,56 @@
 }
 
 <h2>Клиенты</h2>
+@if (ViewBag.access)
+{
+    <p>
+        @Html.ActionLink("Добавить новую запись", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                Фамилия клиента
+            </th>
+            <th>
+                Имя клиента
+            </th>
+            <th>
+                Отчество клиента
+            </th>
+            <th>
+                Контактная информация
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Добавить новую запись", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Фамилия клиента
-        </th>
-        <th>
-            Имя клиента
-        </th>
-        <th>
-            Отчество клиента
-        </th>
-        <th>
-            Контактная информация
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Patronymic)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ContactInfo)
+                </td>
+                <td>
+                    @Html.ActionLink("Редактировать", "Edit", new { id = item.ClientID }) |
+                    @Html.ActionLink("Просмотр", "Details", new { id = item.ClientID }) |
+                    @Html.ActionLink("Удалить", "Delete", new { id = item.ClientID })
+                </td>
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Patronymic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContactInfo)
-        </td>
-        <td>
-            @Html.ActionLink("Редактировать", "Edit", new { id=item.ClientID }) |
-            @Html.ActionLink("Просмотр", "Details", new { id=item.ClientID }) |
-            @Html.ActionLink("Удалить", "Delete", new { id=item.ClientID })
-        </td>
-    </tr>
+    </table>
 }
-
-</table>
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
