--- a/coursework/Views/Employees/Index.cshtml
+++ b/coursework/Views/Employees/Index.cshtml
@@ -5,53 +5,74 @@
 }
 
 <h2>Работники</h2>
+@if (ViewBag.access)
+{
+    <p>
+        @Html.ActionLink("Добавить новую запись", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                Фамилия работника
+            </th>
+            <th>
+                Имя работника
+            </th>
+            <th>
+                Отчество работника
+            </th>
+            <th>
+                Логин
+            </th>
+            <th>
+                Пароль
+            </th>
+            <th>
+                Должность
+            </th>
+            <th>
+                Зарплата
+            </th>
+            <th></th>
+        </tr>
 
-<p>
-    @Html.ActionLink("Добавить новую запись", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Фамилия работника
-        </th>
-        <th>
-            Имя работника
-        </th>
-        <th>
-            Отчество работника
-        </th>
-        <th>
-            Должность
-        </th>
-        <th>
-            Зарплата
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Patronymic)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Username)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Password)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Roles.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Salary)
+                </td>
+                <td>
+                    @Html.ActionLink("Редактировать", "Edit", new { id = item.EmployeeID }) |
+                    @Html.ActionLink("Просмотр", "Details", new { id = item.EmployeeID }) |
+                    @Html.ActionLink("Удалить", "Delete", new { id = item.EmployeeID })
+                </td>
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Patronymic)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Positions.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Salary)
-        </td>
-        <td>
-            @Html.ActionLink("Редактировать", "Edit", new { id = item.EmployeeID }) |
-            @Html.ActionLink("Просмотр", "Details", new { id = item.EmployeeID }) |
-            @Html.ActionLink("Удалить", "Delete", new { id = item.EmployeeID })
-        </td>
-    </tr>
+    </table>
 }
-
-</table>
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
