--- a/coursework/Views/Services/Details.cshtml
+++ b/coursework/Views/Services/Details.cshtml
@@ -5,46 +5,54 @@
 }
 
 <h2>Просмотр</h2>
+@if (ViewBag.access)
+{
+    <div>
+        <h4>Услуга</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                Название
+            </dt>
 
-<div>
-    <h4>Услуга</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Название
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                Описание
+            </dt>
 
-        <dt>
-            Описание
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+            <dt>
+                Цена
+            </dt>
 
-        <dt>
-            Цена
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Price)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+            <dt>
+                Категория
+            </dt>
 
-        <dt>
-            Категория
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ServiceCategories.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ServiceCategories.Name)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Редактировать", "Edit", new { id = Model.ServiceID }) |
-    @Html.ActionLink("Вернуться назад", "Index")
-</p>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Редактировать", "Edit", new { id = Model.ServiceID }) |
+        @Html.ActionLink("Вернуться назад", "Index")
+    </p>
+}
+else
+{
+    <div>
+        <p class="lead" style="color: red;">@ViewBag.Message</p>
+    </div>
+}
